--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -6,20 +6,20 @@
 
     <group android:checkableBehavior="single">
 
-        <item android:id="@+id/Media"
-            android:title="Média"
+        <item android:id="@+id/calcularMedia"
+            android:title="Calcular Média"
             android:icon="@drawable/ic_menu_media">
 
         </item>
 
-        <item android:id="@+id/chamada"
-            android:title="Média"
+        <item android:id="@+id/Chamada"
+            android:title="Chamada"
             android:icon="@drawable/ic_menu_chamada">
 
         </item>
 
         <item android:id="@+id/perfil"
-            android:title="Média"
+            android:title="Perfil"
             android:icon="@drawable/ic_menu_perfil">
 
         </item>
@@ -31,6 +31,7 @@
         android:icon="@drawable/ic_menu_calculadora"
         android:title="Calculadora"></item>
     <item android:title="Configuracoes">
+
         <menu>
             <item android:id="@+id/configuracao"
                 android:title="Configuracao"
